fix spacing problems in startView

--- a/assets/less/views/start.less
+++ b/assets/less/views/start.less
@@ -14,7 +14,7 @@
 	}
 
 	body {
-		padding-top: 0;
+		padding-top: 50px;
 	}
 
 	#topNav {
@@ -253,7 +253,7 @@
 		#requestInvite {
 			border-top: 1px solid #ccc;
 			display: inline-block;
-			margin-top: 0.67em;
+			margin-top: 1.67em;
 		}
 
 		@media @mobile {
